// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRating renders correctly excellent rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
    }
  }
>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#f2007d",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    8.7
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    Excellent
  </Text>
</View>
`;

exports[`UserRating renders correctly good rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
    }
  }
>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#faaf00",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    7.5
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    Good
  </Text>
</View>
`;

exports[`UserRating renders correctly okay rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
    }
  }
>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FF0000",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    6
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    Okay
  </Text>
</View>
`;

exports[`UserRating renders correctly very good rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
    }
  }
>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#88E788",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    8.1
  </Text>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    Very good
  </Text>
</View>
`;
